edition = "2023";

package testkube.sync.v1;

// WebhookTemplateId is the information required to
// uniquely identify a WebhookTemplate object.
message WebhookTemplateId {
  // Id is the unique ID string for a WebhookTemplate.
  string id = 1;
}
